--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      @font-face {
+          font-family: 'Helvetica Neue';
+          src: url('./assets/fonts/helvetica-neu.ttf') format('truetype');
+      }
+
+      @font-face {
+          font-family: 'La Belle Aurore';
+          src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2');
+      }
+
+      @font-face {
+          font-family: 'Coolvetica';
+          src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
+      }
+  </style>
+      <link rel="stylesheet" href="styles.css">
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
