--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,17 @@
     <style>
       @font-face {
           font-family: 'Helvetica Neue';
-          src: url('./assets/fonts/helvetica-neu.ttf') format('truetype');
+          src: url('/src/assets/fonts/helvetica-neu.ttf') format('truetype');
       }
 
       @font-face {
           font-family: 'La Belle Aurore';
-          src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2');
+          src: url('/src/assets/fonts/LaBelleAurore.woff2') format('woff2');
       }
 
       @font-face {
           font-family: 'Coolvetica';
-          src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
+          src: url('/src/assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
       }
   </style>
       <link rel="stylesheet" href="styles.css">
